完善个人页面

--- a/manifest.json
+++ b/manifest.json
@@ -52,23 +52,23 @@
 		},
 		"usingComponents": true
 	},
-	"vueVersion": "2",
-	"h5": {
-		"devServer": {
-			"port": 8080, //浏览器运行端口
-			"disableHostCheck": true,
-			"proxy": {
-				"/": {
-					"target": "http://localhost:8000", //实际请求服务器地址
-					"changeOrigin": true,
-					"secure": true,
-					"pathRewrite": {
-						"^/": ""
-					}
-				}
-			}
-		}
-	}
+	"vueVersion": "2"
+	// "h5": {
+	// 	"devServer": {
+	// 		"port": 8080, //浏览器运行端口
+	// 		"disableHostCheck": true,
+	// 		"proxy": {
+	// 			"/": {
+	// 				"target": "http://localhost:8000", //实际请求服务器地址
+	// 				"changeOrigin": true,
+	// 				"secure": true,
+	// 				"pathRewrite": {
+	// 					"^/": ""
+	// 				}
+	// 			}
+	// 		}
+	// 	}
+	// }
 
 
 }
